# wasmint

./: .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md  generateCoverage.template.sh  main.cpp  runTestsuite.sh  runTestsuite.template.sh  testValgrind.sh  testValgrind.template.sh  ubsan_blacklist  valgrind.supp
debugger/: FunctionList.cpp  FunctionList.h  InstructionViewer.h  MemoryViewer.h  VMViewer.cpp  VMViewer.h  WasmDbg.cpp  WasmDbg.h  Widget.cpp  Widget.h  main.cpp
docs/: BinaryFormat.md  Instructions.md
examples/pong/: pong.wast
lib/builtins/: StdioModule.h
lib/interpreter/: FunctionState.h  Heap.cpp  Heap.h  MachineState.cpp  MachineState.h
lib/serialization/: ByteInputStream.h
libwasmint/builtins/: AssertModule.cpp  RandomModule.cpp  RandomModule.h  SpectestModule.cpp  SpectestModule.h  StdioModule.cpp  StdioModule.h
libwasmint/interpreter/: ByteCode.h  ByteOpcodes.h  CompiledFunction.cpp  CompiledFunction.h  FunctionFrame.cpp  FunctionFrame.h  Heap.h  HeapPatch.h  History.cpp  History.h  InstructionCounter.cpp  InstructionCounter.h  InstructionExecutor.cpp  InstructionExecutor.h  InstructionState.cpp  InstructionState.h  JITCompiler.cpp  JITCompiler.h  MachinePatch.h  MachineState.cpp  MachineState.h  RegisterAllocator.cpp  RegisterAllocator.h  SafeAddition.h  StepResult.h  Thread.cpp  Thread.h  ThreadPatch.h  VMState.cpp  VMState.h  VMThread.cpp  VMThread.h  ValueStack.cpp  ValueStack.h  WasmintVM.cpp  WasmintVM.h  WasmintVMTester.cpp  WasmintVMTester.h
libwasmint/serialization/: ByteInputStream.cpp  ByteInputStream.h  ByteOutputStream.cpp  ByteOutputStream.h  Serializeable.cpp  Serializeable.h
libwasmint/tests/: BasicInterpreterTest.cpp  HeapPatchTest.cpp  HeapTest.cpp  MachineStateSerializationTest.cpp  QuickSortTest.cpp  VariableTest.cpp
src/: ExceptionWithMessage.cpp  ExceptionWithMessage.h  Function.cpp  Function.h  FunctionContext.cpp  FunctionContext.h  FunctionSignature.cpp  FunctionSignature.h  FunctionTable.cpp  FunctionTable.h  Global.cpp  Global.h  GlobalTable.cpp  GlobalTable.h  Instruction.h  InstructionSet.cpp  InstructionSet.h  Module.cpp  Module.h  ModuleContext.cpp  ModuleContext.h  OpcodeTable.cpp  OpcodeTable.h  Section.cpp  Section.h  Type.cpp  Type.h  TypeTable.cpp  TypeTable.h  Variable.cpp  Variable.h
src/builtins/: AssertModule.cpp  AssertModule.h  SDLModule.cpp  SDLModule.h  StdioModule.cpp  StdioModule.h
src/instructions/: Block.h  Break.cpp  Break.h  Continue.cpp  Forever.h  FunctionCall.cpp  FunctionCall.h  GetGlobal.cpp  GetGlobal.h  GetLocal.cpp  GetLocal.h  I32Add.cpp  I32Add.h  If.cpp  If.h  Instruction.cpp  Instruction.h  InstructionSet.cpp  InstructionSet.h  Literal.cpp  Literal.h  Print.cpp  Print.h  Return.cpp  SetGlobal.cpp  SetGlobal.h  SetLocal.cpp  SetLocal.h  StepResult.h
src/interpreter/: Environment.cpp  Environment.h  FunctionState.cpp  FunctionState.h  Heap.cpp  Heap.h  InstructionExecutor.cpp  InstructionExecutor.h  InstructionState.cpp  InstructionState.h  MachineState.cpp  MachineState.h  RuntimeEnvironment.cpp  RuntimeEnvironment.h  StepResult.cpp  StepResult.h  Thread.cpp  Thread.h
src/parsing/: ByteStream.cpp  ByteStream.h  CodeSectionParser.cpp  CodeSectionParser.h  FunctionParser.cpp  ModuleParser.h  (+12 more)
tests/: ByteStreamTest.cpp  ExampleModuleTest.cpp  ForeverBreakTest.cpp  GlobalTest.cpp  HeapTest.cpp  LoadStoreTest.cpp  MachineStateSerializationTest.cpp  SerializationTest.cpp  SimpleModuleTest.cpp  VariableTest.cpp
testsuite-converter/: main.cpp
wasm-module/: CMakeLists.txt
wasm-module/src/: ExceptionWithMessage.cpp  ExceptionWithMessage.h  Function.cpp  Function.h  FunctionContext.cpp  FunctionContext.h  FunctionSignature.cpp  FunctionSignature.h  FunctionTable.cpp  FunctionTable.h  FunctionType.cpp  FunctionType.h  FunctionTypeTable.cpp  FunctionTypeTable.h  HeapData.cpp  HeapData.h  HeapSegment.cpp  HeapSegment.h  Module.cpp  Module.h  ModuleContext.cpp  ModuleContext.h  ModuleLoader.cpp  ModuleLoader.h  OpcodeTable.cpp  OpcodeTable.h  SafeAddition.cpp  Section.cpp  Section.h  TypeTable.cpp  TypeTable.h  Utils.cpp  Utils.h  Variable.cpp  Variable.h
wasm-module/src/binary_parsing/: ByteStream.cpp  ByteStream.h  CodeSectionParser.cpp  CodeSectionParser.h  FunctionParser.cpp  FunctionParser.h  FunctionTableParser.cpp  FunctionTableParser.h  ModuleParser.cpp  ModuleParser.h  OpcodeTableParser.cpp  OpcodeTableParser.h  TypeTableParser.cpp  TypeTableParser.h
wasm-module/src/branching/: BranchInformation.cpp  BranchInformation.h  BranchTypeValidator.cpp  BranchTypeValidator.h
wasm-module/src/instructions/: Instruction.cpp  Instruction.h  InstructionAddress.cpp  InstructionAddress.h  InstructionId.cpp  InstructionId.h  InstructionSet.cpp  InstructionSet.h  Instructions.cpp  Instructions.h  UnreachableValidator.cpp  UnreachableValidator.h
wasm-module/src/sexpr_parsing/: CharacterStream.cpp  CharacterStream.h  FileCharacterStream.cpp  FileCharacterStream.h  FunctionParser.cpp  FunctionParser.h  InstructionParser.cpp  InstructionParser.h  ModuleParser.cpp  ModuleParser.h  SExpr.cpp  SExpr.h  SExprParser.cpp  SExprParser.h  StringCharacterStream.cpp  StringCharacterStream.h  Types.cpp  Types.h
wasm-module/src/sexpr_serializing/: ModuleSerializer.cpp  ModuleSerializer.h
wasm-module/src/types/: Float32.cpp  Float32.h  Float64.cpp  Float64.h  Int32.cpp  Int32.h  Int64.cpp  Int64.h  Type.cpp  Type.h  Void.cpp  Void.h
wasm-module/tests/: ByteStreamTest.cpp  CharacterStreamTest.cpp  DecNumberTest.cpp  HexNumberTest.cpp  InstructionAddressTest.cpp  LineNumberTest.cpp  ModuleParserTest.cpp  ModuleTest.cpp  SExprParserTest.cpp
wasm-module/tests/sexpr_tests/: test.wast
wasm-to-c/: FunctionConverter.cpp  FunctionConverter.h  InjectedWasmLib.h  ModuleConverter.cpp  ModuleConverter.h  main.cpp  runTestsuiteWasm2c.template.sh
wasmdbg/: InstructionViewer.cpp  MemoryViewer.h  Widget.h  main.cpp
wasmdbg_src/: MemoryViewer.cpp
wast-converter/: main.cpp
wast-runner/: TestCase.cpp  TestCase.h  TestRunner.cpp  TestRunner.h  main.cpp
wast_tests/: assertReturn.wast  print.wast
(+178 files in other folders)
